--- a/New_model.ipynb
+++ b/New_model.ipynb
@@ -582,10 +582,10 @@
     "plt.figure(figsize=(6,6))\n",
     "plt.axis('off')\n",
     "if img_preds>= 0.5: \n",
-    "    out = ('I am {:.2%} percent confirmed that this is a Pneumonia case'.format(img_preds[0][0]))\n",
+    "    out = ('This is a Pneumonia case')\n",
     "    \n",
     "else: \n",
-    "    out = ('I am {:.2%} percent confirmed that this is a Normal case'.format(1-img_preds[0][0]))\n",
+    "    out = ('This is a Normal case')\n",
     "plt.title(\"Chest X-Ray\\n\"+out)  \n",
     "plt.imshow(np.squeeze(pp_img))\n",
     "plt.show()"
@@ -651,10 +651,10 @@
     "plt.figure(figsize=(6,6))\n",
     "plt.axis('off')\n",
     "if img_preds>= 0.5: \n",
-    "    out = ('I am {:.2%} percent confirmed that this is a Pneumonia case'.format(img_preds[0][0]))\n",
+    "    out = ('This is a Pneumonia case')\n",
     "    \n",
     "else: \n",
-    "    out = ('I am {:.2%} percent confirmed that this is a Normal case'.format(1-img_preds[0][0]))\n",
+    "    out = ('This is a Normal case')\n",
     "plt.title(\"Chest X-Ray\\n\"+out)  \n",
     "plt.imshow(np.squeeze(pp_img))\n",
     "plt.show()"
